# bubbleShooter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: build.yml
resources/: btn_down.aseprite  btn_up.aseprite  resources.json
src/: main.c  main.cpp
src/core/: gameScene.cpp  gameScene.h  scene.cpp  scene.h
src/core/config/: config.h
src/core/managers/: audioManager.cpp  audioManager.h  collisionManager.cpp  collisionManager.h  eventManager.cpp  eventManager.h  fontManager.cpp  fontManager.h  gameStateManager.cpp  gameStateManager.h  resourceManager.cpp  resourceManager.h  textureManager.cpp  textureManager.h
src/core/modifiers/: collisionBox.cpp  collisionBox.h
src/core/node/: button.cpp  button.h  colorRect.h  label.cpp  label.h  node.cpp  node.h  textureRect.h  toggleButton.cpp  toggleButton.h
src/core/utils/: console.h  debug.h  math.h  raycast.h
src/game/: ball.cpp  ball.h  ballContainer.cpp  ballContainer.h  board.h  bubbleGame.cpp  bubbleGame.h  bubbleGameConfig.h  bubbleScene.cpp  bubbleScene.h  bullet.cpp  bullet.h  cannon.cpp  cannon.h  combo.cpp  combo.h  comboContainer.cpp  comboContainer.h  difficultyController.h  inventory.cpp  inventory.h
src/game/board/: ball.cpp  ball.h
src/game/controllers/: ballController.cpp  ballController.h  difficultyController.h
src/game/player/: bullet.cpp  bullet.h  cannon.cpp  cannon.h  comboContainer.cpp  inventory.cpp  inventory.h
